--- a/tank_game.qsf
+++ b/tank_game.qsf
@@ -114,4 +114,5 @@ set_location_assignment PIN_AB17 -to HEX1[3]
 set_location_assignment PIN_AA16 -to HEX1[2]
 set_location_assignment PIN_AB16 -to HEX1[1]
 set_location_assignment PIN_AA17 -to HEX1[0]
+set_global_assignment -name VHDL_FILE output_files/bullet.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
