--- a/tank_game.qsf
+++ b/tank_game.qsf
@@ -116,4 +116,6 @@ set_location_assignment PIN_AB16 -to HEX1[1]
 set_location_assignment PIN_AA17 -to HEX1[0]
 set_global_assignment -name VHDL_FILE output_files/bullet.vhd
 set_global_assignment -name QIP_FILE pll.qip
+set_location_assignment PIN_H15 -to led_hit_1_on_2
+set_location_assignment PIN_G16 -to led_hit_2_on_1
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
